Stop using Guava's ImmutableSet and ImmutableMap